# fractals

./: README.md
c/: .gitignore  CMakeLists.txt  app.c  fractal.c  fractal.h  main.c
python/: cfractals.c  cfractals.pyx  complex.py  plot.py  plot.py.lprof  requirements.txt  setup.py
